Remove commons-codec dependency.
Turns out that Java already comes with default implementations of
SHA-1, SHA-256, and Base64 that we can use.